--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 <!--      FOOTER-->
       	<div class="footer">
 		<div class="container">
+            <div id="messageInput"></div>
 			<form>
   <input name="name" id="nameInput"placeholder="What is your name?" class="name" required />
   <input name="emailaddress" id="emailInput"placeholder="What is your email?" class="email" type="email" required />
